--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-page",
+  "name": "hashtagmarkys-portfolio",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
