--- a/.github/workflows/patches-test.yml
+++ b/.github/workflows/patches-test.yml
@@ -86,5 +86,6 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add patches/info.json
-          git commit -m "[PATCH INFO] Update info.json" || echo "No changes to commit"
+          git add patches/ikigai.zip
+          git commit -m "[PATCH INFO] Update Patch Files" || echo "No changes to commit"
           git push
