--- a/.github/workflows/patches-test.yml
+++ b/.github/workflows/patches-test.yml
@@ -79,9 +79,11 @@ jobs:
           echo "{\"file\": \"./patches/ikigai.zip\", \"patches\": $JSON_PATCHES}" | jq . > patches/info.json
           cat patches/info.json
 
-      - name: Upload info
+      - name: Update patches
         if: steps.check_commit.outputs.skip == 'false'
         run: |
+          echo "⏳ Waiting 2 minutes before uploading..."
+          sleep 120
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add patches/info.json
