--- a/.github/workflows/patches.yml
+++ b/.github/workflows/patches.yml
@@ -6,7 +6,8 @@ on:
       - main
 
 jobs:
-  build:
+  upload:
+    if: startsWith(github.event.head_commit.message, '[NEW PATCH]')
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.IKIGAI_PRODUCTIONS }}
@@ -15,37 +16,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Verify commit title
-        id: check_commit
-        run: |
-          TITLE="$(git log -1 --pretty=%s)"
-          echo "Commit title: $TITLE"
-          if [[ "$TITLE" == \[NEW\ PATCH\]* ]]; then
-            echo "skip=false" >> $GITHUB_OUTPUT
-          else
-            echo "skip=true" >> $GITHUB_OUTPUT
-            echo "⏭️ Commit does not start with [NEW PATCH], skipping patch build."
-          fi
-
       - name: Install dependencies
-        if: steps.check_commit.outputs.skip == 'false'
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install requests
 
       - name: Create zip
-        if: steps.check_commit.outputs.skip == 'false'
         run: |
           rm -f ikigai/patches/ikigai.zip
           zip -j ikigai/patches/ikigai.zip ikigai/patches/raw/*
 
       - name: Generate info
-        if: steps.check_commit.outputs.skip == 'false'
         run: |
           python3 ikigai/patches/patches.py
 
       - name: Update patches
-        if: steps.check_commit.outputs.skip == 'false'
         run: |
           echo "⏳ Waiting 2 minutes before uploading..."
           sleep 120
