--- a/.github/workflows/patches.yml
+++ b/.github/workflows/patches.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  upload:
+  patch:
     if: startsWith(github.event.head_commit.message, '[NEW PATCH]')
     runs-on: ubuntu-latest
     env:
@@ -41,3 +41,10 @@ jobs:
           git add ikigai/patches/ikigai.zip
           git commit -m "[PATCH INFO] Update Patch Files" || echo "No changes to commit"
           git push
+  none:
+    if: startsWith(github.event.head_commit.message, '[NEW PATCH]')
+    runs-on: ubuntu-latest
+    needs: []
+    steps:
+      - name: Commit message doesn't include [NEW PATCH]
+        run: echo "Release commit not detected" && exit 0
