--- a/.github/workflows/patches.yml
+++ b/.github/workflows/patches.yml
@@ -42,7 +42,7 @@ jobs:
           git commit -m "[PATCH INFO] Update Patch Files" || echo "No changes to commit"
           git push
   none:
-    if: !startsWith(github.event.head_commit.message, '[NEW PATCH]')
+    if: ${{ !startsWith(github.event.head_commit.message, '[NEW PATCH]') }}
     runs-on: ubuntu-latest
     needs: []
     steps:
